[package]
name = "colonyos"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for ColonyOS"
license = "MIT"
repository = "https://github.com/colonyos/rust"
keywords = ["colonies", "colonyos", "distributed", "computing"]

[lib]
crate-type = ["rlib"]

[dependencies]
# Cryptography
sha3 = "0.10"
hex = "0.4"
rand = "0.8"
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP/Async
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }

# Encoding
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
random-string = "1.0"
