[package]
name = "wasm-executor"
version = "0.1.0"
edition = "2021"
description = "ColonyOS WASM Executor Example"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# ColonyOS SDK with WASM feature
colonyos = { path = "../..", default-features = false, features = ["wasm"] }

# WASM bindings
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Navigator",
    "Document",
    "HtmlElement",
    "HtmlDivElement",
    "HtmlButtonElement",
    "HtmlInputElement",
    "Event",
    "EventTarget",
] }

# Async runtime for WASM
gloo-timers = { version = "0.3", features = ["futures"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

# Logging in WASM
console_log = "1"
log = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
